# EngineeringMath

./: .gitignore  README.md
Derivatives/: differentiate_Quasi_symbolic.py  differentiate_numeric.py  differentiate_symbolic.py
Derivatives/c++/: CMakeLists.txt  gsl_numerical_diff.cpp  simple_numerical_diff.cpp
LinearAlgebra/: dot_cross.py  rref.py
LinearAlgebra/c++/: CMakeLists.txt  README.md  eigen.cpp
